--- a/config/examples/config.v2.local.yaml
+++ b/config/examples/config.v2.local.yaml
@@ -7,24 +7,25 @@ storage:
 aggregation:
   interval: 30s
 ingestion:
-  queueBufferSize: 10000
-  producerWorkers: 10
-  producerWriteTimeout: 10s
-  queueHighWaterPercent: 0.9
+  queueBufferSize: 100000
+  producerWorkers: 48
+  producerWriteTimeout: 5s
+  queueHighWaterPercent: 0.98
+  syncOnIngest: true
 consumer:
-  flushSize: 512
-  flushInterval: 500ms
+  flushSize: 4096
+  flushInterval: 100ms
   persistTimeout: 5s
 kafka:
   brokers:
     - localhost:19092
   topic: logs
   groupID: logs-consumer-group
-  batchSize: 10000
-  batchTimeout: 200ms
-  batchBytes: 0
+  batchSize: 5000
+  batchTimeout: 5ms
+  batchBytes: 2000000
   compression: none
-  async: true
+  async: false
   # use enough consumers to cover partitions and keep up with bursts
-  consumers: 10
+  consumers: 12
   requireAllAcks: true
