chore: add k3d configuration and namespaces for production lab setup

--- a/deploy/minio/minio-lab.yaml
+++ b/deploy/minio/minio-lab.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
   root-user: minioadmin
-  root-password: CHANGE_ME_MINIO_PASSWORD
+  root-password: 5mpeVdS&KDn3Ks)
 ---
 apiVersion: v1
 kind: Service
