--- a/deploy/minio/minio-lab.yaml
+++ b/deploy/minio/minio-lab.yaml
@@ -44,7 +44,7 @@ spec:
         fsGroup: 1001
       containers:
         - name: minio
-          image: bitnami/minio:2025.10.15
+          image: bitnamilegacy/minio:2025.7.23-debian-12-r5
           imagePullPolicy: IfNotPresent
           securityContext:
             runAsUser: 1001
