feat: implement lab plan steps 2-8 hardening
- Step 2: add build metadata plumbing and expose metadata in app wiring.

- Step 3: add /version and /ready endpoints with storage and Kafka readiness checks.

- Step 4: add API key auth support for POST /logs with configurable header and keys.

- Step 5: extend config schema/defaults for auth and file|minio backend settings; update examples and tests.

- Step 6: bound shutdown commit/persist paths with timeout behavior and add regression tests.

- Step 7: add MinIO repository with grouped hourly NDJSON append semantics and bucket readiness helper.

- Step 8: wire backend selection and auth settings in bootstrap; add startup behavior tests for file/minio paths.

Refs: /home/log_forge/deploy/lab/plan.md:69

--- a/config/examples/config.v1.local.yaml
+++ b/config/examples/config.v1.local.yaml
@@ -1,9 +1,22 @@
 version: 1
 server:
   addr: ":8082"
+auth:
+  enabled: false
+  headerName: "X-API-Key"
+  keys: []
 storage:
+  backend: file
   logsDir: "./logs"
   analyticsDir: "./analytics"
+  minio:
+    endpoint: "localhost:9000"
+    bucket: "logforge"
+    accessKey: "minioadmin"
+    secretKey: "minioadmin"
+    useSSL: false
+    logsPrefix: "logs"
+    analyticsPrefix: "analytics"
 aggregation:
   interval: 30s
 kafka:
