--- a/config/examples/config.v2.yaml
+++ b/config/examples/config.v2.yaml
@@ -6,9 +6,22 @@ server:
   writeTimeout: 10s
   idleTimeout: 60s
   requestTimeout: 5s
+auth:
+  enabled: false
+  headerName: "X-API-Key"
+  keys: []
 storage:
+  backend: file
   logsDir: "/data/v2/logs"
   analyticsDir: "/data/v2/analytics"
+  minio:
+    endpoint: "minio.storage.svc.cluster.local:9000"
+    bucket: "logforge"
+    accessKey: ""
+    secretKey: ""
+    useSSL: false
+    logsPrefix: "logs"
+    analyticsPrefix: "analytics"
 aggregation:
   interval: 30s
 ingestion:
