docs: add step 12 secrets and repo settings runbook
- Step 12: add explicit runbook for GitHub/GHCR settings and cluster secret setup.

- Added deploy/lab/step5.md covering repository settings checklist, GHCR permissions checklist, runtime secret creation, image pull secret creation, and verification commands.

- Added deploy/kubectl/logforge-runtime-secrets.example.yaml with staging and production runtime secret key shapes that match environment values.

- Updated deploy/env/staging/values.yaml and deploy/env/production/values.yaml to use imagePullSecrets with ghcr-pull so GHCR pull credentials are consumed by the chart.

- Validation: helm template renders for staging and production include imagePullSecrets name ghcr-pull.

Refs: /home/log_forge/deploy/lab/plan.md:222

--- a/deploy/env/staging/values.yaml
+++ b/deploy/env/staging/values.yaml
@@ -3,6 +3,9 @@ replicaCount: 1
 image:
   tag: v0.1.0-rc1
 
+imagePullSecrets:
+  - name: ghcr-pull
+
 secrets:
   create: false
   existingSecret: logforge-staging-runtime
