--- a/deploy/env/production/values.yaml
+++ b/deploy/env/production/values.yaml
@@ -3,6 +3,9 @@ replicaCount: 3
 image:
   tag: v0.1.0
 
+imagePullSecrets:
+  - name: ghcr-pull
+
 secrets:
   create: false
   existingSecret: logforge-production-runtime
