feat: include minio in local stack-up for v2
- Update make stack-up to start minio and minio-setup alongside kafka and prometheus.

- Add MinIO services to docker-compose.yaml with healthcheck and one-shot bucket bootstrap for logforge bucket.

- Wire app-v2 compose service dependency to minio/minio-setup.

- Switch v2 example configs to storage.backend=minio for compose and local runs.

- Set compose v2 MinIO endpoint to minio:9000 and local v2 endpoint to localhost:9000 with minioadmin credentials.

- Validation: docker compose config and go test ./... -count=1 passed.

--- a/config/examples/config.v2.yaml
+++ b/config/examples/config.v2.yaml
@@ -11,14 +11,14 @@ auth:
   headerName: "X-API-Key"
   keys: []
 storage:
-  backend: file
+  backend: minio
   logsDir: "/data/v2/logs"
   analyticsDir: "/data/v2/analytics"
   minio:
-    endpoint: "minio.storage.svc.cluster.local:9000"
+    endpoint: "minio:9000"
     bucket: "logforge"
-    accessKey: ""
-    secretKey: ""
+    accessKey: "minioadmin"
+    secretKey: "minioadmin"
     useSSL: false
     logsPrefix: "logs"
     analyticsPrefix: "analytics"
