--- a/config/examples/config.v2.local.yaml
+++ b/config/examples/config.v2.local.yaml
@@ -11,7 +11,7 @@ auth:
   headerName: "X-API-Key"
   keys: []
 storage:
-  backend: file
+  backend: minio
   logsDir: "./logs"
   analyticsDir: "./analytics"
   minio:
