--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,34 @@
 services:
+  minio:
+    image: minio/minio:RELEASE.2025-07-23T15-54-02Z
+    container_name: minio
+    command: ["server", "/data", "--console-address", ":9001"]
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+      timeout: 5s
+      retries: 12
+
+  minio-setup:
+    image: minio/mc:RELEASE.2025-07-21T05-28-08Z
+    container_name: minio-setup
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: ["/bin/sh", "-ec"]
+    command: >
+      mc alias set local http://minio:9000 minioadmin minioadmin &&
+      mc mb -p local/logforge || true
+    restart: "no"
+
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: kafka
@@ -57,8 +87,11 @@ services:
       - ./data/v2/analytics:/data/v2/analytics
     depends_on:
       - kafka
+      - minio
+      - minio-setup
     ports:
       - "8083:8083"
 
 volumes:
   kafka_data:
+  minio_data:
