fix: bootstrap minio bucket during stack-up
Update Makefile stack-up target to run only long-lived services with 'docker compose up -d', then execute 'docker compose run --rm minio-setup' as a deterministic one-shot bucket bootstrap step.

Update docker-compose.yaml minio-setup command to a single shell script string that retries mc alias initialization and creates bucket local/logforge with mc mb -p.

This prevents app-v2 MinIO aggregation startup failures like: 'The specified bucket does not exist'.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,14 +19,12 @@ services:
 
   minio-setup:
     image: minio/mc:RELEASE.2025-07-21T05-28-08Z
-    container_name: minio-setup
     depends_on:
       minio:
         condition: service_healthy
     entrypoint: ["/bin/sh", "-ec"]
-    command: >
-      mc alias set local http://minio:9000 minioadmin minioadmin &&
-      mc mb -p local/logforge || true
+    command:
+      - until mc alias set local http://minio:9000 minioadmin minioadmin >/dev/null 2>&1; do sleep 1; done; mc mb -p local/logforge
     restart: "no"
 
   kafka:
@@ -88,7 +86,6 @@ services:
     depends_on:
       - kafka
       - minio
-      - minio-setup
     ports:
       - "8083:8083"
 
