--- a/.github/workflows/promote-production.yml
+++ b/.github/workflows/promote-production.yml
@@ -42,7 +42,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: chore/promote-production-${{ inputs.version }}
           delete-branch: true
-          commit-message: chore: promote production image to ${{ inputs.version }}
+          commit-message: "chore: promote production image to ${{ inputs.version }}"
           title: "chore: promote production image to ${{ inputs.version }}"
           body: |
             Promote production deployment to `${{ inputs.version }}`.
