fix: point kafka brokers to strimzi bootstrap service
Update Kafka broker DNS in Helm defaults and env values to use Strimzi bootstrap service name.

Changed files:

- deploy/env/staging/values.yaml

- deploy/env/production/values.yaml

- deploy/helm/logforge/values.yaml

--- a/deploy/env/production/values.yaml
+++ b/deploy/env/production/values.yaml
@@ -31,4 +31,4 @@ config:
       analyticsPrefix: analytics
   kafka:
     brokers:
-      - kafka.kafka.svc.cluster.local:9092
+      - my-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092
