--- a/deploy/helm/logforge/values.yaml
+++ b/deploy/helm/logforge/values.yaml
@@ -137,7 +137,7 @@ config:
     persistTimeout: 5s
   kafka:
     brokers:
-      - kafka.kafka.svc.cluster.local:9092
+      - my-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092
     topic: logs
     groupID: logs-consumer-group
     batchSize: 5000
