feat: add dev env and enforce staging-prod parity
Add dev deployment values and Argo CD application manifest.

Align staging runtime profile with production (version 2 + MinIO + Kafka) while keeping env-specific secret and bucket differences.

Update release workflow to bump both deploy/env/dev/values.yaml and deploy/env/staging/values.yaml on tag releases.

Extend namespace and runtime secret templates to include dev.

Persist MinIO lab reliability fixes in deploy/minio/minio-lab.yaml (writable tmp, MC_CONFIG_DIR, staging/production default buckets).

Update runbooks: deploy/lab/step3.md deploy/lab/step5.md deploy/lab/step6.md and deploy/lab/plan.md for the new 3-environment flow and staging endpoint port-forward usage.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
             BUILD_COMMIT=${{ github.sha }}
             BUILD_DATE=${{ steps.meta.outputs.build_date }}
 
-  update-staging-values:
+  update-dev-and-staging-values:
     runs-on: ubuntu-latest
     needs: build-and-publish
     steps:
@@ -80,20 +80,21 @@ jobs:
         with:
           ref: ${{ github.event.repository.default_branch }}
 
-      - name: Update staging image tag
+      - name: Update dev and staging image tags
         run: |
+          sed -i -E "s|^([[:space:]]*tag:[[:space:]]*).*$|\\1${GITHUB_REF_NAME}|" deploy/env/dev/values.yaml
           sed -i -E "s|^([[:space:]]*tag:[[:space:]]*).*$|\\1${GITHUB_REF_NAME}|" deploy/env/staging/values.yaml
 
-      - name: Create PR for staging tag update
+      - name: Create PR for dev and staging tag update
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: chore/staging-image-${{ github.ref_name }}
+          branch: chore/dev-staging-image-${{ github.ref_name }}
           delete-branch: true
-          commit-message: "chore: bump staging image to ${{ github.ref_name }}"
-          title: "chore: bump staging image to ${{ github.ref_name }}"
+          commit-message: "chore: bump dev and staging image to ${{ github.ref_name }}"
+          title: "chore: bump dev and staging image to ${{ github.ref_name }}"
           body: |
-            Update staging image tag after release `${{ github.ref_name }}`.
+            Update dev and staging image tags after release `${{ github.ref_name }}`.
 
             Image: `${{ needs.build-and-publish.outputs.image_repo }}:${{ needs.build-and-publish.outputs.image_tag }}`
           base: ${{ github.event.repository.default_branch }}
