--- a/deploy/kubectl/logforge-runtime-secrets.example.yaml
+++ b/deploy/kubectl/logforge-runtime-secrets.example.yaml
@@ -1,6 +1,17 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  name: logforge-dev-runtime
+  namespace: dev
+type: Opaque
+stringData:
+  dev_auth_keys_json: '["CHANGE_ME_DEV_API_KEY"]'
+  dev_minio_access_key: "CHANGE_ME_DEV_MINIO_ACCESS_KEY"
+  dev_minio_secret_key: "CHANGE_ME_DEV_MINIO_SECRET_KEY"
+---
+apiVersion: v1
+kind: Secret
+metadata:
   name: logforge-staging-runtime
   namespace: staging
 type: Opaque
