--- a/deploy/kubectl/namespaces.yaml
+++ b/deploy/kubectl/namespaces.yaml
@@ -31,4 +31,9 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: dev
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: production
