fix: correct MinIO service endpoint for staging and production
Update MinIO endpoint DNS from minio.minio.svc.cluster.local:9000 to minio.storage.svc.cluster.local:9000 in:

- deploy/env/staging/values.yaml

- deploy/env/production/values.yaml

This matches the actual MinIO Service namespace (storage) so v2 runtime can resolve and reach MinIO.

--- a/deploy/env/staging/values.yaml
+++ b/deploy/env/staging/values.yaml
@@ -24,7 +24,7 @@ config:
     logsDir: /var/lib/logforge/logs
     analyticsDir: /var/lib/logforge/analytics
     minio:
-      endpoint: minio.minio.svc.cluster.local:9000
+      endpoint: minio.storage.svc.cluster.local:9000
       bucket: logforge-staging
       useSSL: false
       logsPrefix: logs
