fix: update MinIO credentials in runtime secrets for dev, staging, and production

--- a/deploy/kubectl/logforge-runtime-secrets.example.yaml
+++ b/deploy/kubectl/logforge-runtime-secrets.example.yaml
@@ -6,8 +6,9 @@ metadata:
 type: Opaque
 stringData:
   dev_auth_keys_json: '["CHANGE_ME_DEV_API_KEY"]'
-  dev_minio_access_key: "CHANGE_ME_DEV_MINIO_ACCESS_KEY"
-  dev_minio_secret_key: "CHANGE_ME_DEV_MINIO_SECRET_KEY"
+  # Lab default: must match secret/minio-root-creds in namespace storage.
+  dev_minio_access_key: "minioadmin"
+  dev_minio_secret_key: "5mpeVdS&KDn3Ks)"
 ---
 apiVersion: v1
 kind: Secret
@@ -17,8 +18,9 @@ metadata:
 type: Opaque
 stringData:
   auth_keys_json: '["CHANGE_ME_STAGING_API_KEY"]'
-  minio_access_key: "CHANGE_ME_STAGING_MINIO_ACCESS_KEY"
-  minio_secret_key: "CHANGE_ME_STAGING_MINIO_SECRET_KEY"
+  # Lab default: must match secret/minio-root-creds in namespace storage.
+  minio_access_key: "minioadmin"
+  minio_secret_key: "5mpeVdS&KDn3Ks)"
 ---
 apiVersion: v1
 kind: Secret
@@ -28,5 +30,6 @@ metadata:
 type: Opaque
 stringData:
   production_auth_keys_json: '["CHANGE_ME_PRODUCTION_API_KEY"]'
-  production_minio_access_key: "CHANGE_ME_PRODUCTION_MINIO_ACCESS_KEY"
-  production_minio_secret_key: "CHANGE_ME_PRODUCTION_MINIO_SECRET_KEY"
+  # Lab default: must match secret/minio-root-creds in namespace storage.
+  production_minio_access_key: "minioadmin"
+  production_minio_secret_key: "5mpeVdS&KDn3Ks)"
