--- a/deploy/lab/versions.env
+++ b/deploy/lab/versions.env
@@ -16,4 +16,4 @@ INGRESS_NGINX_CHART_VERSION=4.14.1
 INGRESS_NGINX_CONTROLLER_VERSION=v1.14.1
 KUBE_PROM_STACK_CHART_VERSION=82.0.2
 
-MINIO_IMAGE=bitnamilegacy/minio:2025.7.23-debian-12-r5
+MINIO_IMAGE=minio/minio:RELEASE.2025-09-07T16-13-09Z
